# Macalatro

./: .gitignore  CMakeLists.txt  Macalatro.sln  README.md
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
Deckerz/: Card.cpp  Chance.cpp  Debug.cpp  Debug.hpp  Deck.cpp  Deck.hpp  Hand.cpp  Hand.hpp  Round.hpp  main.cpp
Macalatro/: AI.cpp  AI.hpp  CMakeLists.txt  Card.cpp  Card.hpp  Chance.cpp  Chance.hpp  Consumables.cpp  Consumables.hpp  Debug.cpp  Debug.hpp  Deck.cpp  Deck.hpp  Hand.cpp  Hand.hpp  Macalatro.vcxproj  Macalatro.vcxproj.filters  Round.cpp  Round.hpp  Table.cpp  Table.hpp  Turn.hpp  main.cpp
